syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
option go_package = "boiler-plate/proto/url/v1;url";

package proto.url.v1;
import "protoc-gen-openapiv2/options/annotations.proto";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "URL Service",
    version: "v2",
    description: "User service handle API for CRUD users"
  },
  host: "localhost:8080",
};
service Service {
  rpc CreateURL (CreateURLRequest) returns (CreateURLResponse) {
    option (google.api.http) = {
      post: "/api/v2/url"
      body: "*"
    };
  };
  rpc DetailURL (DetailURLRequest) returns (DetailURLResponse) {
    option (google.api.http) = {
      get: "/api/v2/url/{shorturl}"
    };
  }
}

message URLs {
  int32 id = 1;                            // Go int to ProtoBuf int32
  string longurl = 2;                        // Go string to ProtoBuf string
  string shorturl = 3;                     // Go string to ProtoBuf string
  google.protobuf.Timestamp created_at = 4; // Go *time.Time to ProtoBuf Timestamp
}

message CreateURLRequest{
  string longurl = 1;                        // Go string to ProtoBuf string
}

message CreateURLResponse{
  URLs data = 1;
  MutationResponse response = 2;
}

message DetailURLRequest {
  string shorturl = 1; // Request shorturl detailurl
}

message DetailURLResponse {
  URLs url = 1; // Response detailurl
}

message MutationResponse {
  string message = 1;
}